# 64

./: .gitignore  Cargo.toml  README.md  build-tests.sh  diff.sh
.cargo/: config.toml
.github/workflows/: test.yml
app/: Cargo.toml
app/src/: command.rs  core_thread.rs  event.rs  main.rs  ui.rs
app/src/emu/: command.rs  core_thread.rs  event.rs  mod.rs
app/src/ui/: ai.rs  colors.rs  events.rs  framebuffer.rs  instructions.rs  isviewer.rs  memory.rs  mi.rs  mod.rs  registers.rs  rsp.rs  si.rs  sp.rs  text.rs  vi.rs  widgets.rs
app/src/ui/widgets/: ai_widget.rs  controller_widget.rs  cop0_widget.rs  cop1_widget.rs  cpu_widget.rs  dp_widget.rs  events_widget.rs  framebuffer_widget.rs  isviewer_widget.rs  memory_widget.rs  mi_widget.rs  pi_widget.rs  si_widget.rs  sp_widget.rs  tlb_widget.rs  vi_widget.rs
core/: Cargo.toml
core/benches/: endianness.rs  rom_execution.rs
core/src/: ai.rs  bits.rs  blocks.rs  breakpoints.rs  cart.rs  controller.rs  cop0.rs  cop1.rs  cpu.rs  data.rs  dd.rs  dp.rs  events.rs  exception.rs  isviewer.rs  lib.rs  location.rs  map.rs  mi.rs  openbus.rs  pi.rs  pif.rs  ram.rs  registers.rs  rendering.rs  rsp.rs  si.rs  sp.rs  system.rs  tlb.rs  value.rs  vi.rs
core/src/cpu/: decoder.rs  instructions.rs  instructions_cop0.rs  instructions_cop1.rs  instructions_cop2.rs  instructions_cpu.rs  opcode.rs  operands.rs
core/src/cpu/decoder/: basic.rs  lut.rs
core/src/cpu/instructions/: cop0.rs  cop1.rs  cop2.rs  regimm.rs  special.rs  standard.rs
core/src/instructions/: instructions_cop0.rs  instructions_cop1.rs  instructions_cop2.rs  instructions_cpu.rs  mod.rs  opcode.rs
core/src/rendering/: atlas.rs  audio.rs  tile_cache.rs  video.rs  video.shader
core/src/sp/: instructions.rs  opcode.rs
core/tests/: data.rs  endianness.rs  lemmy.rs  lemon.rs
lib/: Cargo.toml
lib/src/: ai.rs  breakpoints.rs  cart.rs  cop0.rs  cop1.rs  cpu.rs  data.rs  dd.rs  dp.rs  events.rs  exception.rs  instructions.rs  interrupt.rs  isviewer.rs  lib.rs  map.rs  mi.rs  openbus.rs  pi.rs  pif.rs  rdram.rs  registers.rs  rsp.rs  si.rs  system.rs  tlb.rs  vi.rs
lib/src/instructions/: instructions_cop0.rs  instructions_cop1.rs  instructions_cop2.rs  instructions_cpu.rs  mod.rs  opcode.rs
lib/tests/: data.rs  lemon.rs
runner/: Cargo.toml
runner/src/: main.rs
specs/: Cargo.toml
specs/src/: ai.rs  cart.rs  color.rs  cop0.rs  dd.rs  exception.rs  interrupt.rs  isviewer.rs  lib.rs  map.rs  mi.rs  pi.rs  pif.rs  rdp.rs  rsp.rs  si.rs  timing.rs  vi.rs
specs/src/cpu/: instructions.rs  registers.rs
test-suite/: Cargo.toml
test-suite-common/: Cargo.toml
test-suite-common/src/: lib.rs  result.rs  test.rs
test-suite-rom/: Cargo.toml  build.rs  linker.ld  rust-toolchain.toml
test-suite-rom/.cargo/: config.toml
test-suite-rom/src/: allocator.rs  app.rs  comparator.rs  data.rs  display.rs  exceptions.rs  framebuffer.rs  io.rs  isviewer.rs  lib.rs  main.rs  program.rs  sc64.rs  test.rs  tests.rs
test-suite-rom/src/tests/: AiDma.rs  AiLengthRegisterMasking.rs  AiRegisters.rs  AiRegistersMirroring.rs  Cop0Registers.rs  Cop0RegistersMasking.rs  CpuInstructionAnd.rs  CpuInstructionsArithmetic.rs  CpuInstructionsException.rs  CpuInstructionsLoadStore.rs  CpuInstructionsLogical.rs  CpuInstructionsShift.rs  Dummy.rs  MiMaskRegisterClearSet.rs  MiRegisters.rs  MiVersionRegisterValue.rs  PiRegisters.rs  PiRegistersMirroring.rs  RspDma.rs  RspDmaBuffering.rs  RspDmaFromRam.rs  RspDmaLatching.rs  RspMemory.rs  RspMemoryMirroring.rs  RspRegisters.rs  RspRegistersMasking.rs  RspRegistersMirroring.rs  RspSemaphoreRegister.rs  ViRegisters.rs  ViRegistersMasking.rs
test-suite-server/: Cargo.toml
test-suite-server/src/: all.rs  build.rs  clean.rs  cli.rs  execute.rs  list.rs  main.rs  record.rs  upload.rs
test-suite/src/: main.rs
test-suite/src/tests/: ai.rs
