[workspace]
members = ["specs", "core", "app", "runner", "test-suite-common", "test-suite-rom", "test-suite-server"]
default-members = ["specs", "core", "app", "test-suite-common", "test-suite-rom", "test-suite-server"]
resolver = "3"

#[profile.release]
#lto = "fat"
#codegen-units = 1
#panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
strip = false
