[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
crossbeam = "0.8.4"
eframe = "0.33.0"
egui = "0.33.0"
env_logger = "0.11.9"
log = "0.4"
n64_core = { path = "../core" }
rand = "0.10.0"
rfd = "0.17.2"
strum = { version = "0.27.2", features = ["derive"] }
