[package]
name = "n64_core"
version = "0.1.0"
edition = "2024"

[dependencies]
arbitrary-int = "2.1.1"
bitbybit = "2.0.0"
bytemuck = "1.25.0"
log = "0.4"
paste = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"
zip = "8.1.0"

[dev-dependencies]
image = { version = "0.25.9", default-features = false, features = ["png"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
rstest = "0.26.1"
