[package]
name = "n64"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
paste = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
image = { version = "0.25.9", default-features = false, features = ["png"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
rstest = "0.26.1"
