[package]
name = "test_suite_rom"
version = "0.1.0"
edition = "2024"

[features]
record = []
replay = []
default = ["record"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
arbitrary-int = "2.1"
embedded-graphics = "0.8.2"
embedded-text = "0.7.3"
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
linked_list_allocator = "0.10"
n64_specs = { path = "../specs" }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
strum = { version = "0.27.2", default-features = false }
test_suite_common = { path = "../test-suite-common" }
