[package]
name = "test_suite_server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serialport = "4.9"
test_suite_common = { path = "../test-suite-common" }
winnow = "1.0.2"
