[package]
name = "test_suite_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6", features = ["derive"] }
duct = "1.1.1"
env_logger = "0.11.10"
log = "0.4.29"
object = "0.39.1"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serialport = "4.9"
similar = "3.1.0"
strum = { version = "0.27.2", features = ["derive"] }
test_suite_common = { path = "../test-suite-common" }
winnow = "1.0.2"
