[package]
name = "test_suite_server"
description = "A Nintendo 64 test suite that records behaviors on real hardware and bundles the collected data into self-contained replay ROMs, for emulator development and research"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6", features = ["derive"] }
duct = "1.1.1"
object = "0.39.1"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
regex = "1.12.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serialport = "4.9"
similar = "3.1.0"
strum = { version = "0.27.2", features = ["derive"] }
test_suite_common = { path = "../test-suite-common" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tree = "0.4.1"
ureq = "3.3.0"
winnow = "1.0.2"
zip = "8.6.0"
